# FG-Network

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  libFGNetwork.sln
FGServerTest/: FGServerTest.vcxproj  FGServerTest.vcxproj.filters  main.cpp
libFGClient/: CMakeLists.txt  Client.cpp  Client.h  libFGClient.vcxproj  libFGClient.vcxproj.filters
libFGClient/include/: FGClient.h
libFGClient/pch/: stdafx.h
libFGClient/src/: Client.cpp  FGClient.cpp
libFGNetworkShared/: CMakeLists.txt  libFGNetworkShared.vcxproj  libFGNetworkShared.vcxproj.filters
libFGNetworkShared/include/: FGConnection.h  FGNetworkSharedHelper.h
libFGNetworkShared/pch/: stdafx.h
libFGNetworkShared/src/: FGConnection.cpp
libFGServer/: CMakeLists.txt  Connection.cpp  Connection.h  Server.cpp  Server.h  libFGServer.vcxproj  libFGServer.vcxproj.filters  stdafx.h
libFGServer/include/: Server.h
libFGServer/pch/: stdafx.h
libFGServer/src/: Connection.cpp  FGServer.cpp  Server.cpp
