CMAKE_MINIMUM_REQUIRED (VERSION 3.4)

SET(PROJECT_NAME ${SHARED_PROJECT_NAME})
PROJECT(${PROJECT_NAME})

SET(PROJECT_ROOT_DIR ${SHARED_ROOT_DIR})
SET(HEADER_FILES "")
SET(SRC_FILES "")

FILE(GLOB HEADER_FILES
${PROJECT_ROOT_DIR}/${HEADER_DIR}/*.h
${PROJECT_ROOT_DIR}/${PCH_HEADER}
)

FILE(GLOB SRC_FILES
${PROJECT_ROOT_DIR}/${SRC_DIR}/*.cpp
${PROJECT_ROOT_DIR}/${PCH_SRC}
)

ADD_LIBRARY(${PROJECT_NAME}
${HEADER_FILES}
${SRC_FILES}
)

INCLUDE_DIRECTORIES(${PCH_DIR})
INCLUDE_DIRECTORIES(${HEADER_DIR})

INCLUDE_DIRECTORIES(${BOOST_HEADER_DIR})

MSVC_SET_PCH(${PROJECT_NAME}
${PCH_HEADER}
${PCH_SRC}
)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C++)